--- a/index.html
+++ b/index.html
@@ -31,12 +31,27 @@
   <div style="height: 100px;"></div>
 
   <main class="container py-5">
-    <h2 class="text-center mb-4">Bienvenido a <span class="text-primary">MUNGUIA PEREZ LLC</span></h2>
-    <p class="text-center lead mb-5">Expertos en construcción, remodelación y acabados de alta calidad. Gracias por confiar en nosotros.</p>
-  
-    <div class="text-center mb-5">
-      <img src="img/logo.jpg" alt="Logo de la empresa" class="img-fluid" style="max-width: 250px;">
-    </div>
+    <div class="row align-items-center mb-4">
+
+        <div class="col-md-2 text-center text-md-start">
+            <img src="img/logo.png" alt="Logo de la empresa"
+            class="img-fluid rounded shadow-sm"
+            style="max-width: 120px;">
+       
+        </div>
+
+        <div class="col-md-10">
+          <h2 class="mb-0">
+            Bienvenido a <span class="text-primary">MUNGUIA PEREZ LLC</span>
+          </h2>
+        </div>
+      </div>
+ 
+      <p class="text-center lead mb-5">
+        Expertos en construcción, remodelación y acabados de alta calidad.<br>
+        Gracias por confiar en nosotros.
+      </p>
+    
   
     <h2 class="text-center mb-4">Conozca nuestros servicios</h2>
     <div id="carouselTrabajos" class="carousel slide mb-5" data-bs-ride="carousel">
