--- a/proyectos.html
+++ b/proyectos.html
@@ -58,6 +58,7 @@
           <div class="card-body">
             <h5 class="card-title">Remodelación de Cocina</h5>
             <p class="card-text">Diseño moderno, materiales premium y entrega puntual.</p>
+            <a href="p" class="btn btn-primary btn-sm mt-2">Ver proyecto</a>
           </div>
         </div>
       </div>
