--- a/acerca.html
+++ b/acerca.html
@@ -9,25 +9,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      padding-top: 100px;
-      padding-bottom: 80px;
-    }
-    .about-box {
-      background-color: #f8f9fa;
-      padding: 2rem;
-      border-radius: 0.5rem;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-  </style>
-</head>
-<body>
 
-  <header class="text-white py-3 fixed-top shadow-sm" style="background-color: #0047AB;">
+</head>
+<body style="font-family: 'Montserrat', sans-serif;">
+
+    <header class="text-white py-3 fixed-top shadow-sm" style="background-color: #0047AB;">
     <div class="container text-center">
       <h1 class="fs-4 fw-bold mb-2">MUNGUIA PEREZ LLC</h1>
+      
       <nav class="d-flex justify-content-center gap-4 flex-wrap">
         <a href="index.html" class="text-white text-decoration-none">Inicio</a>
         <a href="proyectos.html" class="text-white text-decoration-none">Proyectos</a>
@@ -40,25 +29,34 @@
   <div style="height: 100px;"></div>
 
   <main class="container py-5">
-    <h2 class="text-center mb-4">🌟 Sobre Nosotros</h2>
-
     <div class="row justify-content-center">
-      <div class="col-md-10 about-box">
-        <p class="lead">
-          <strong>MUNGUIA PEREZ LLC</strong> es una empresa comprometida con la excelencia en el sector de la construcción, remodelación y acabados. Con años de experiencia y un equipo altamente calificado, hemos llevado a cabo proyectos residenciales y comerciales de gran impacto y calidad.
-        </p>
-        <p>
-          Nuestra misión es brindar soluciones constructivas innovadoras, funcionales y estéticamente impecables. Nos enorgullece ofrecer un servicio personalizado, donde cada cliente recibe atención detallada y resultados garantizados.
-        </p>
-        <p>
-          Nos destacamos por nuestra responsabilidad, cumplimiento de tiempos de entrega, selección de materiales de alta calidad y por supuesto, la satisfacción de nuestros clientes.
-        </p>
-        <p>
-          ¡Gracias por confiar en nosotros para construir tus sueños!
-        </p>
+      <div class="col-md-10">
+        <div class="bg-white border border-2 border-primary rounded-4 shadow-lg p-5 position-relative overflow-hidden">
+          
+          <!-- Ícono decorativo -->
+          <div class="text-center mb-4">
+            <i class="bi bi-building text-primary" style="font-size: 3rem;"></i>
+            <h2 class="fw-bold text-primary mt-2">Sobre Nosotros</h2>
+          </div>
+  
+          <!-- Contenido -->
+          <p class="lead text-center mb-4">
+            <strong>MUNGUIA PEREZ LLC</strong> es una empresa comprometida con la excelencia en el sector de la construcción, remodelación y acabados. Con años de experiencia y un equipo altamente calificado, hemos llevado a cabo proyectos residenciales y comerciales de gran impacto y calidad.
+          </p>
+          <p>
+            Nuestra misión es brindar soluciones constructivas innovadoras, funcionales y estéticamente impecables. Nos enorgullece ofrecer un servicio personalizado, donde cada cliente recibe atención detallada y resultados garantizados.
+          </p>
+          <p>
+            Nos destacamos por nuestra responsabilidad, cumplimiento de tiempos de entrega, selección de materiales de alta calidad y por supuesto, la satisfacción de nuestros clientes.
+          </p>
+          <p class="fw-semibold text-primary">
+            ¡Gracias por confiar en nosotros para construir tus sueños!
+          </p>
+        </div>
       </div>
     </div>
   </main>
+  
 
   <footer class="text-white py-3 fixed-bottom" style="background-color: #0047AB;">
     <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center flex-wrap">
