--- a/contacto.html
+++ b/contacto.html
@@ -9,39 +9,58 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      padding-top: 100px;
-      padding-bottom: 80px;
-    }
-  </style>
-</head>
-<body>
 
-  <header class="text-white py-3 fixed-top shadow-sm" style="background-color: #0047AB;">
-    <div class="container text-center">
-      <h1 class="fs-4 fw-bold mb-2">MUNGUIA PEREZ LLC</h1>
-      <nav class="d-flex justify-content-center gap-4 flex-wrap">
-        <a href="index.html" class="text-white text-decoration-none">Inicio</a>
-        <a href="proyectos.html" class="text-white text-decoration-none">Proyectos</a>
-        <a href="contacto.html" class="text-white text-decoration-none">Contacto</a>
-        <a href="acerca.html" class="text-white text-decoration-none">Nosotros</a>
-      </nav>
-    </div>
-  </header>
+<body>
+    <header class="text-white py-3 fixed-top shadow-sm" style="background-color: #0047AB;">
+        <div class="container text-center">
+          <h1 class="fs-4 fw-bold mb-2">MUNGUIA PEREZ LLC</h1>
+          
+          <nav class="d-flex justify-content-center gap-4 flex-wrap">
+            <a href="index.html" class="text-white text-decoration-none">Inicio</a>
+            <a href="proyectos.html" class="text-white text-decoration-none">Proyectos</a>
+            <a href="contacto.html" class="text-white text-decoration-none">Contacto</a>
+            <a href="acerca.html" class="text-white text-decoration-none">Nosotros</a>
+          </nav>
+        </div>
+      </header>
 
   <main class="container py-5">
     <h2 class="text-center mb-4">📬 Contáctanos</h2>
 
 
-    <div class="row justify-content-center mb-4">
-      <div class="col-md-6 text-center">
-        <p><i class="bi bi-telephone-fill me-2"></i><strong>Teléfono:</strong> <a href="tel:+50660001111" class="text-decoration-none">+506 6000 1111</a></p>
-        <p><i class="bi bi-geo-alt-fill me-2"></i><strong>Dirección:</strong> San José, Costa Rica</p>
-      </div>
-    </div>
+    <div class="row justify-content-center mb-5">
+        <div class="col-md-6">
+          <div class="bg-white border border-2 border-primary rounded-4 shadow-lg p-4 text-center">
+            <!-- Ícono grande decorativo -->
+            <div class="mb-3">
+              <i class="bi bi-person-lines-fill text-primary" style="font-size: 3rem;"></i>
+            </div>
 
+            <h4 class="mb-3 fw-bold text-primary">Información de contacto</h4>
+
+            <p>
+              <i class="bi bi-telephone-fill me-2"></i>
+              <strong>Teléfono:</strong> 
+              <a href="tel:+50660001111" class="text-decoration-none">+506 6000 1111</a>
+            </p>
+            <p>
+              <i class="bi bi-whatsapp me-2 text-success"></i>
+              <strong>WhatsApp:</strong> 
+              <a href="https://wa.me/50660001111" target="_blank" class="text-decoration-none">+506 6000 1111</a>
+            </p>
+            <p>
+              <i class="bi bi-envelope-fill me-2"></i>
+              <strong>Correo:</strong> 
+              <a href="mailto:info@munguia.com" class="text-decoration-none">info@munguia.com</a>
+            </p>
+            <p>
+              <i class="bi bi-geo-alt-fill me-2"></i>
+              <strong>Dirección:</strong> San José, Costa Rica
+            </p>
+          </div>
+        </div>
+      </div>
+      
 
     <div class="row justify-content-center mb-5">
       <div class="col-md-10">
