--- a/proyecto4.html
+++ b/proyecto4.html
@@ -5,6 +5,7 @@
   <title>Remodelación de Cocina - MUNGUIA PEREZ LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Estilos y fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet" />
@@ -71,6 +72,7 @@
         <h1 class="fs-4 fw-bold m-0" style="letter-spacing: 1px;">MUNGUIA PEREZ LLC</h1>
         <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
       </div>
+
       <nav class="d-flex gap-4 flex-wrap justify-content-center">
         <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Inicio</a>
         <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Proyectos</a>
@@ -80,13 +82,16 @@
     </div>
   </header>
 
+  <!-- CONTENIDO -->
   <main class="container py-5">
 
+    <!-- Título -->
     <section class="text-center mb-5">
-      <h2 class="text-primary"><i class="bi bi-house-door-fill me-2"></i>Remodelación de Cocina</h2>
-      <p class="text-muted">Un cambio radical con diseño moderno y funcionalidad total.</p>
+      <h2 class="text-primary"><i class="bi bi-house-door-fill me-2"></i>4</h2>
+      <p class="text-muted">2</p>
     </section>
 
+    <!-- Imágenes antes y después -->
     <section class="row g-4 justify-content-center">
       <div class="col-md-6 text-center">
         <h5 class="text-secondary">Antes</h5>
@@ -97,23 +102,23 @@
         <img src="img/cocina-despues.jpg" alt="Después" class="img-fluid rounded shadow-sm">
       </div>
     </section>
-  
-   
+
     <div class="text-center mt-5">
       <a href="proyectos.html" class="btn btn-outline-primary px-4 py-2">
         <i class="bi bi-arrow-left me-1"></i> Volver a proyectos
       </a>
     </div>
- 
-    <div class="text-center mt-4">
-      <a href="proyecto2.html" class="btn btn-outline-secondary px-4">
-        Siguiente proyecto <i class="bi bi-arrow-right ms-1"></i>
+    <div class="d-flex justify-content-between align-items-center mt-4">
+      <a href="proyecto3.html" class="btn btn-outline-secondary">
+        <i class="bi bi-arrow-left"></i> Anterior
+      </a>
+      <span class="text-muted small">Proyecto 4 de 6</span>
+      <a href="proyecto5.html" class="btn btn-outline-secondary">
+        Siguiente <i class="bi bi-arrow-right"></i>
       </a>
     </div>
     
-  
   </main>
-  
 
   <footer class="text-white py-3 fixed-bottom" style="background-color: #01357c;">
     <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center flex-wrap">
