--- a/proyecto2.html
+++ b/proyecto2.html
@@ -5,6 +5,7 @@
   <title>Remodelación de Cocina - MUNGUIA PEREZ LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Estilos y fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet" />
@@ -67,10 +68,11 @@
   <header class="text-white py-3 fixed-top shadow-lg" style="background-color: #01357c; z-index: 1000;">
     <div class="container d-flex justify-content-between align-items-center flex-wrap">
 
-      <div class="text-white">
-        <h1 class="fs-4 fw-bold m-0" style="letter-spacing: 1px;">MUNGUIA PEREZ LLC</h1>
-        <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
-      </div>
+        <div class="text-white">
+            <h1 class="fs-4 fw-bold m-0" style="letter-spacing: 1px;">MUNGUIA PEREZ LLC</h1>
+            <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
+          </div>
+
       <nav class="d-flex gap-4 flex-wrap justify-content-center">
         <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Inicio</a>
         <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Proyectos</a>
@@ -80,12 +82,14 @@
     </div>
   </header>
 
+
   <main class="container py-5">
 
     <section class="text-center mb-5">
-      <h2 class="text-primary"><i class="bi bi-house-door-fill me-2"></i>Remodelación de Cocina</h2>
-      <p class="text-muted">Un cambio radical con diseño moderno y funcionalidad total.</p>
+      <h2 class="text-primary"><i class="bi bi-house-door-fill me-2"></i>2</h2>
+      <p class="text-muted">2</p>
     </section>
+
 
     <section class="row g-4 justify-content-center">
       <div class="col-md-6 text-center">
@@ -97,23 +101,23 @@
         <img src="img/cocina-despues.jpg" alt="Después" class="img-fluid rounded shadow-sm">
       </div>
     </section>
-  
-   
+
     <div class="text-center mt-5">
       <a href="proyectos.html" class="btn btn-outline-primary px-4 py-2">
         <i class="bi bi-arrow-left me-1"></i> Volver a proyectos
       </a>
     </div>
- 
-    <div class="text-center mt-4">
-      <a href="proyecto2.html" class="btn btn-outline-secondary px-4">
-        Siguiente proyecto <i class="bi bi-arrow-right ms-1"></i>
-      </a>
-    </div>
-    
-  
+    <div class="d-flex justify-content-between align-items-center mt-4">
+        <a href="proyecto1.html" class="btn btn-outline-secondary">
+          <i class="bi bi-arrow-left"></i> Anterior
+        </a>
+        <span class="text-muted small">Proyecto 2 de 6</span>
+        <a href="proyecto3.html" class="btn btn-outline-secondary">
+          Siguiente <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+      
   </main>
-  
 
   <footer class="text-white py-3 fixed-bottom" style="background-color: #01357c;">
     <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center flex-wrap">
