--- a/proyecto2.html
+++ b/proyecto2.html
@@ -21,6 +21,7 @@
       padding-top: 100px;
       padding-bottom: 80px;
       background-color: #f8fafc;
+      background-image: url('img/fondo.png');
     }
     h2 {
       font-weight: 700;
@@ -73,12 +74,12 @@
             <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
           </div>
 
-      <nav class="d-flex gap-4 flex-wrap justify-content-center">
-        <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Inicio</a>
-        <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Proyectos</a>
-        <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contacto</a>
-        <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Nosotros</a>
-      </nav>
+          <nav class="d-flex gap-4 flex-wrap justify-content-center">
+            <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Home</a>
+            <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Projects</a>
+            <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contact</a>
+            <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">About Us</a>
+          </nav>
     </div>
   </header>
 
@@ -86,38 +87,78 @@
   <main class="container py-5">
 
     <section class="text-center mb-5">
-      <h2 class="text-primary"><i class="bi bi-house-door-fill me-2"></i>2</h2>
-      <p class="text-muted">2</p>
+      <h2 class="text-primary"><i class="bi bi-house-door-fill me-2"></i>Bathroom Renovation</h2>
+      <p class="text-muted">Modern tiles, functional lighting, and flawless details.</p>
     </section>
+  
 
-
-    <section class="row g-4 justify-content-center">
-      <div class="col-md-6 text-center">
-        <h5 class="text-secondary">Antes</h5>
-        <img src="img/cocina-antes.jpg" alt="Antes" class="img-fluid rounded shadow-sm">
+    <section class="mb-5">
+      <h4 class="text-center text-secondary mb-4">Before</h4>
+      <div class="row g-3">
+        <div class="col-6 col-md-3">
+          <img src="img/antes1.jpeg" class="img-fluid rounded shadow-sm" alt="Before 1">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="img/antes2.jpeg" class="img-fluid rounded shadow-sm" alt="Before 2">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="img/antes3.jpeg" class="img-fluid rounded shadow-sm" alt="Before 3">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="img/antes4.jpeg" class="img-fluid rounded shadow-sm" alt="Before 4">
+        </div>
       </div>
-      <div class="col-md-6 text-center">
-        <h5 class="text-secondary">Después</h5>
-        <img src="img/cocina-despues.jpg" alt="Después" class="img-fluid rounded shadow-sm">
+    </section>
+  
+
+    <section class="mb-5">
+      <h4 class="text-center text-secondary mb-4">After</h4>
+      <div class="row g-3">
+        <div class="col-6 col-md-3">
+          <img src="img/bano1.jpeg" class="img-fluid rounded shadow-sm" alt="After 1">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="img/bano2.jpeg" class="img-fluid rounded shadow-sm" alt="After 2">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="img/bano3.jpeg" class="img-fluid rounded shadow-sm" alt="After 3">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="img/bano4.jpeg" class="img-fluid rounded shadow-sm" alt="After 4">
+        </div>
+      </div>
+    </section>
+  
+
+    <section class="mb-5">
+      <h4 class="text-center text-primary mb-4">Project Video</h4>
+      <div class="ratio ratio-16x9 rounded-4 overflow-hidden shadow-sm border">
+ 
+        <iframe src="img/video.mp4" title="Bathroom Renovation Video"
+          allowfullscreen loading="lazy"></iframe>
       </div>
     </section>
 
     <div class="text-center mt-5">
       <a href="proyectos.html" class="btn btn-outline-primary px-4 py-2">
-        <i class="bi bi-arrow-left me-1"></i> Volver a proyectos
+        <i class="bi bi-arrow-left me-1"></i> Back to Projects
       </a>
     </div>
+  
+  
     <div class="d-flex justify-content-between align-items-center mt-4">
-        <a href="proyecto1.html" class="btn btn-outline-secondary">
-          <i class="bi bi-arrow-left"></i> Anterior
-        </a>
-        <span class="text-muted small">Proyecto 2 de 6</span>
-        <a href="proyecto3.html" class="btn btn-outline-secondary">
-          Siguiente <i class="bi bi-arrow-right"></i>
-        </a>
-      </div>
-      
+      <a href="proyecto1.html" class="btn btn-outline-secondary">
+        <i class="bi bi-arrow-left"></i> Previous
+      </a>
+      <span class="text-muted small">Project 2 of 6</span>
+      <a href="proyecto3.html" class="btn btn-outline-secondary">
+        Next <i class="bi bi-arrow-right"></i>
+      </a>
+    </div>
+  
   </main>
+  
+  
 
   <footer class="text-white py-3 fixed-bottom" style="background-color: #01357c;">
     <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center flex-wrap">
