--- a/acerca.html
+++ b/acerca.html
@@ -16,6 +16,7 @@
       background-color: #f8fafc;
       padding-top: 100px;
       padding-bottom: 80px;
+      background-image: url('img/fondo.png');
     }
 
     header h1 {
