--- a/contacto.html
+++ b/contacto.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contacto - MUNGUIA PEREZ LLC</title>
+  <title>Contact - MUNGUIA PEREZ LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
       background-color: #f8fafc;
       padding-top: 100px;
       padding-bottom: 80px;
-    }
+      background-image: url('img/fondo.png');
 
-    header h1 {
-      font-size: 1.7rem;
-      letter-spacing: 1px;
-      animation: slideDown 0.8s ease-in-out;
     }
-
     .nav-link-hover {
       position: relative;
       transition: color 0.3s;
     }
 
     .nav-link-hover::after {
-      content: '';
-      position: absolute;
-      width: 0;
-      height: 2px;
-      background-color: white;
-      bottom: -3px;
-      left: 0;
-      transition: width 0.3s;
-    }
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 2px;
+        bottom: -2px;
+        left: 0;
+        background-color: white;
+        transition: width 0.3s;
+      }
 
     .nav-link-hover:hover::after {
       width: 100%;
@@ -47,88 +41,69 @@
     .nav-link-hover:hover {
       color: #cce0ff;
     }
-
-    @keyframes slideDown {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
+    header h1 {
+      font-size: 1.7rem;
+      letter-spacing: 1px;
     }
-
-    .card-contacto {
-      border: 2px solid #0047AB;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .card-contacto:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-    }
-
-    iframe {
-      border-radius: 12px;
-    }
-    .icon-circle {
-  width: 48px;
-  height: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    @keyframes floatIcon {
+  from { transform: translateY(0); }
+  to { transform: translateY(-6px); }
 }
- 
+
+    .icon-circle {
+      width: 48px;
+      height: 48px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
   </style>
 </head>
 <body>
   <header class="text-white py-3 fixed-top shadow-sm" style="background-color: #01357c;">
     <div class="container d-flex justify-content-between align-items-center flex-wrap">
-
       <div class="d-flex align-items-center gap-3">
-        <img src="img/logo.jpg" alt="Logo" style="height: 55px; border-radius: 10px; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+        <img src="img/logo.jpg" alt="Logo" style="height: 55px; border-radius: 10px;">
         <div class="text-white">
-          <h1 class="fs-4 fw-bold m-0" style="letter-spacing: 1px;">MUNGUIA PEREZ LLC</h1>
-          <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
+          <h1 class="fs-4 fw-bold m-0">MUNGUIA PEREZ LLC</h1>
+          <small class="d-block">Construction – Remodeling and Finishing</small>
         </div>
       </div>
-
       <nav class="d-flex gap-4 flex-wrap justify-content-center">
-        <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Inicio</a>
-        <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Proyectos</a>
-        <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contacto</a>
-        <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Nosotros</a>
+        <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Home</a>
+        <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Projects</a>
+        <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contact</a>
+        <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">About Us</a>
       </nav>
     </div>
   </header>
 
   <main class="container py-5">
-
     <h2 class="text-center mb-5 fw-bold">
-      <i class="bi bi-chat-square-text-fill me-2 text-primary"></i>📬 Contáctanos
+      <i class="bi bi-chat-square-text-fill me-2 text-primary"></i>📬 Get in Touch
     </h2>
-  
+
     <section class="row justify-content-center g-4 mb-5">
-  
       <div class="col-lg-6">
         <div class="bg-white p-4 rounded-4 shadow-lg border"
           style="background-image: url('img/fondo-contacto.jpg'); background-size: cover; background-position: center; backdrop-filter: blur(5px);">
-  
           <div class="bg-white bg-opacity-90 rounded-4 p-4">
             <div class="text-center mb-4">
-              <h3 class="fw-bold text-primary">¡Estamos listos para ayudarte!</h3>
-              <p class="text-muted mb-0">Contáctanos por el medio que prefieras 📞📩📍</p>
+              <h3 class="fw-bold text-primary">We’re here to help you!</h3>
+              <p class="text-muted mb-0">Reach out through your preferred method 📞📩📍</p>
             </div>
-  
 
             <div class="row align-items-start">
-
               <div class="col-md-8">
                 <div class="d-flex align-items-start mb-3 gap-3">
                   <div class="icon-circle bg-primary text-white"><i class="bi bi-telephone-fill fs-4"></i></div>
                   <div>
-                    <h6 class="fw-bold mb-1">Teléfono</h6>
-                    <a href="tel:+17868819457" class="text-decoration-none text-dark">+1 (786) 881-9457</a>
+                    <h6 class="fw-bold mb-1">Phone</h6>
+                    <a href="tel:17868819457" class="text-decoration-none text-dark">+1 (786) 881-9457</a>
                   </div>
                 </div>
-  
                 <div class="d-flex align-items-start mb-3 gap-3">
                   <div class="icon-circle bg-success text-white"><i class="bi bi-whatsapp fs-4"></i></div>
                   <div>
@@ -136,88 +111,79 @@
                     <a href="https://wa.me/17868819457" target="_blank" class="text-decoration-none text-dark">+1 (786) 881-9457</a>
                   </div>
                 </div>
-  
                 <div class="d-flex align-items-start mb-3 gap-3">
                   <div class="icon-circle bg-danger text-white"><i class="bi bi-envelope-fill fs-4"></i></div>
                   <div>
-                    <h6 class="fw-bold mb-1">Correo</h6>
+                    <h6 class="fw-bold mb-1">Email</h6>
                     <a href="mailto:info@munguia.com" class="text-decoration-none text-dark">info@munguia.com</a>
                   </div>
                 </div>
-  
                 <div class="d-flex align-items-start gap-3">
                   <div class="icon-circle bg-info text-white"><i class="bi bi-geo-alt-fill fs-4"></i></div>
                   <div>
-                    <h6 class="fw-bold mb-1">Dirección</h6>
-                    <p class="mb-0 small text-muted">1789 NW 43rd Street<br>Miami Beach, FL 33142</p>
+                    <h6 class="fw-bold mb-1">Address</h6>
+                    <p class="mb-0 small text-muted">4304 NW 31st Ave <br>Miami, FL 33142 United States</p>
                   </div>
                 </div>
               </div>
-  
-     
               <div class="col-md-4 text-center">
-                <img src="img\qr.jpeg" alt="Código QR" class="img-fluid rounded-3 shadow-sm mb-2" style="max-width: 140px;">
-                <p class="text-muted small">Escaneá el código para contactarnos</p>
+                <img src="img/qr.jpeg" alt="QR Code" class="img-fluid rounded-3 shadow-sm mb-2" style="max-width: 140px;">
+                <p class="text-muted small">Scan the code to contact us</p>
               </div>
             </div>
-  
+
           </div>
         </div>
       </div>
-  
+
       <div class="col-lg-6">
         <div class="bg-white p-4 rounded-4 shadow-sm border h-100">
           <h4 class="text-center fw-bold mb-4 text-primary">
-            <i class="bi bi-pencil-square me-2"></i>Envíanos un mensaje
+            <i class="bi bi-pencil-square me-2"></i>Send us a message
           </h4>
-          <form onsubmit="enviarWhatsapp(); return false;">
+          <form onsubmit="sendWhatsapp(); return false;">
             <div class="mb-3">
-              <label for="nombre" class="form-label">Nombre completo</label>
-              <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required>
+              <label for="nombre" class="form-label">Full Name</label>
+              <input type="text" class="form-control" id="nombre" placeholder="Your name" required>
             </div>
             <div class="mb-3">
-              <label for="correo" class="form-label">Correo electrónico</label>
-              <input type="email" class="form-control" id="correo" placeholder="tu@email.com" required>
+              <label for="correo" class="form-label">Email</label>
+              <input type="email" class="form-control" id="correo" placeholder="your@email.com" required>
             </div>
             <div class="mb-3">
-              <label for="mensaje" class="form-label">Mensaje</label>
-              <textarea class="form-control" id="mensaje" rows="5" placeholder="Escribí tu mensaje..." required></textarea>
+              <label for="mensaje" class="form-label">Message</label>
+              <textarea class="form-control" id="mensaje" rows="5" placeholder="Write your message..." required></textarea>
             </div>
             <button type="submit" class="btn btn-success w-100">
-              <i class="bi bi-whatsapp me-2"></i>Enviar mensaje por WhatsApp
+              <i class="bi bi-whatsapp me-2"></i>Send via WhatsApp
             </button>
           </form>
         </div>
       </div>
     </section>
-  
-  
+
     <h2 class="text-center mb-4 fw-bold">
-      <i class="bi bi-geo-alt-fill me-2 text-primary"></i>Ubícanos
+      <i class="bi bi-geo-alt-fill me-2 text-primary"></i>Find Us
     </h2>
     <section class="row justify-content-center">
       <div class="col-md-10 col-lg-8">
         <div class="ratio ratio-16x9 rounded-4 overflow-hidden shadow-sm border">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3591.6541258939055!2d-80.22847492405546!3d25.814982406400414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b12f280e0119%3A0x8dc4280dbb307449!2s1787%20NW%2043rd%20St%2C%20Miami%2C%20FL%2033142%2C%20EE.%20UU.!5e0!3m2!1ses-419!2scr!4v1743535639344!5m2!1ses-419!2scr"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3591.6727597314302!2d-80.24913002398878!3d25.81436790642571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b0ce8eefa4f1%3A0x7230d4fb9d617b91!2s4304%20NW%2031st%20Ave%2C%20Miami%2C%20FL%2033142%2C%20EE.%20UU.!5e0!3m2!1ses-419!2scr!4v1743547875616!5m2!1ses-419!2scr"
             style="border:0;" allowfullscreen="" loading="lazy">
           </iframe>
         </div>
       </div>
     </section>
-  
   </main>
-  
-  
+
   <footer class="text-white py-3 fixed-bottom" style="background-color: #01357c;">
     <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center flex-wrap">
-
       <div class="text-center text-md-start mb-2 mb-md-0">
         <strong>MUNGUIA PEREZ LLC</strong> |
         <i class="bi bi-telephone-fill me-1"></i> +1 786-881-9457 |
         <i class="bi bi-envelope-fill me-1"></i> info@munguia.com
       </div>
-
       <div class="d-flex justify-content-center gap-3">
         <a href="https://wa.me/50660001111" target="_blank" class="text-white" title="WhatsApp">
           <i class="fab fa-whatsapp fa-lg"></i>
@@ -226,19 +192,20 @@
           <i class="fab fa-facebook-f fa-lg"></i>
         </a>
       </div>
+    </div>
   </footer>
+
   <script>
-    function enviarWhatsapp() {
+    function sendWhatsapp() {
       const nombre = document.getElementById('nombre').value;
       const correo = document.getElementById('correo').value;
       const mensaje = document.getElementById('mensaje').value;
-      const texto = `Hola, soy ${nombre} (${correo}). Quisiera más información. Mensaje: ${mensaje}`;
-      const url = `https://wa.me/50660001111?text=${encodeURIComponent(texto)}`;
+      const texto = `Hi, I’m ${nombre} (${correo}). I’d like more information. Message: ${mensaje}`;
+      const url = `https://wa.me/17868819457?text=${encodeURIComponent(texto)}`;
       window.open(url, '_blank');
     }
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
 </body>
 </html>
