--- a/proyecto1.html
+++ b/proyecto1.html
@@ -20,6 +20,7 @@
       padding-top: 100px;
       padding-bottom: 80px;
       background-color: #f8fafc;
+      background-image: url('img/fondo.png');
     }
     h2 {
       font-weight: 700;
@@ -72,10 +73,10 @@
         <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
       </div>
       <nav class="d-flex gap-4 flex-wrap justify-content-center">
-        <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Inicio</a>
-        <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Proyectos</a>
-        <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contacto</a>
-        <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Nosotros</a>
+        <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Home</a>
+        <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Projects</a>
+        <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contact</a>
+        <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">About Us</a>
       </nav>
     </div>
   </header>
@@ -83,8 +84,8 @@
   <main class="container py-5">
 
     <section class="text-center mb-5">
-      <h2 class="text-primary"><i class="bi bi-house-door-fill me-2"></i>Remodelación de Cocina</h2>
-      <p class="text-muted">Un cambio radical con diseño moderno y funcionalidad total.</p>
+      <h2 class="text-primary"><i class="bi bi-house-door-fill me-2"></i>Trabajos de ceramica</h2>
+      <p class="text-muted">************.</p>
     </section>
 
     <section class="row g-4 justify-content-center">
