--- a/proyecto5.html
+++ b/proyecto5.html
@@ -21,6 +21,7 @@
       padding-top: 100px;
       padding-bottom: 80px;
       background-color: #f8fafc;
+      background-image: url('img/fondo.png');
     }
     h2 {
       font-weight: 700;
@@ -74,10 +75,10 @@
       </div>
 
       <nav class="d-flex gap-4 flex-wrap justify-content-center">
-        <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Inicio</a>
-        <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Proyectos</a>
-        <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contacto</a>
-        <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Nosotros</a>
+        <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Home</a>
+        <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Projects</a>
+        <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contact</a>
+        <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">About Us</a>
       </nav>
     </div>
   </header>
