--- a/proyecto2.html
+++ b/proyecto2.html
@@ -161,22 +161,15 @@
   
 
   <footer class="text-white py-3 fixed-bottom" style="background-color: #01357c;">
-    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center flex-wrap">
-
-      <div class="text-center text-md-start mb-2 mb-md-0">
+    <div class="container d-flex justify-content-center">
+      <div class="text-center">
         <strong>MUNGUIA PEREZ LLC</strong> |
-        <i class="bi bi-telephone-fill me-1"></i> +1 786-881-9457 |
-        <i class="bi bi-envelope-fill me-1"></i> info@munguia.com
+        <i class="bi bi-telephone-fill me-1"></i>
+        <a href="tel:+17868819457" class="text-white text-decoration-none">+1 (786) 881-9457</a> |
+        <i class="bi bi-envelope-fill me-1"></i>
+        <a href="mailto:remodelingmunguiallc@gmail.com" class="text-white text-decoration-none">remodelingmunguiallc@gmail.com</a>
       </div>
-
-      <div class="d-flex justify-content-center gap-3">
-        <a href="https://wa.me/50660001111" target="_blank" class="text-white" title="WhatsApp">
-          <i class="fab fa-whatsapp fa-lg"></i>
-        </a>
-        <a href="https://www.facebook.com/share/1BetNkak8N/?mibextid=wwXIfr" target="_blank" class="text-white" title="Facebook">
-          <i class="fab fa-facebook-f fa-lg"></i>
-        </a>
-      </div>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
