--- a/contacto.html
+++ b/contacto.html
@@ -5,34 +5,42 @@
   <title>Contact - MUNGUIA PEREZ LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/style.css" />
+  </head>
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
-      background-color: #f8fafc;
-      padding-top: 100px;
-      padding-bottom: 80px;
-      background-image: url('img/fondo.png');
-
-    }
+    font-family: 'Montserrat', sans-serif;
+    padding-top: 100px;
+    padding-bottom: 80px;
+    background-color: #f8fafc;
+    background-image: url('img/fondo.png');
+  } h2 {
+    font-weight: 700;
+  }
+  h5 {
+    font-weight: 600;
+  }
     .nav-link-hover {
       position: relative;
       transition: color 0.3s;
     }
 
     .nav-link-hover::after {
-        content: '';
-        position: absolute;
-        width: 0;
-        height: 2px;
-        bottom: -2px;
-        left: 0;
-        background-color: white;
-        transition: width 0.3s;
-      }
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      bottom: -2px;
+      left: 0;
+      background-color: white;
+      transition: width 0.3s;
+    }
 
     .nav-link-hover:hover::after {
       width: 100%;
@@ -60,25 +68,26 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
   </style>
-</head>
+
 <body>
-  <header class="text-white py-3 fixed-top shadow-sm" style="background-color: #01357c;">
+  <header class="text-white py-3 fixed-top shadow-lg" style="background-color: #01357c; z-index: 1000;">
     <div class="container d-flex justify-content-between align-items-center flex-wrap">
-      <div class="d-flex align-items-center gap-3">
-        <img src="img/logo.jpg" alt="Logo" style="height: 55px; border-radius: 10px;">
+
         <div class="text-white">
-          <h1 class="fs-4 fw-bold m-0">MUNGUIA PEREZ LLC</h1>
-          <small class="d-block">Construction – Remodeling and Finishing</small>
-        </div>
-      </div>
-      <nav class="d-flex gap-4 flex-wrap justify-content-center">
-        <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Home</a>
-        <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Projects</a>
-        <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contact</a>
-        <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">About Us</a>
-      </nav>
+            <h1 class="fs-4 fw-bold m-0" style="letter-spacing: 1px;">MUNGUIA PEREZ LLC</h1>
+            <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
+          </div>
+
+          <nav class="d-flex gap-4 flex-wrap justify-content-center">
+            <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Home</a>
+            <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Projects</a>
+            <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contact</a>
+            <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">About Us</a>
+          </nav>
     </div>
   </header>
+  
+  
 
   <main class="container py-5">
     <h2 class="text-center mb-5 fw-bold">
@@ -115,8 +124,11 @@
                   <div class="icon-circle bg-danger text-white"><i class="bi bi-envelope-fill fs-4"></i></div>
                   <div>
                     <h6 class="fw-bold mb-1">Email</h6>
-                    <a href="mailto:info@munguia.com" class="text-decoration-none text-dark">info@munguia.com</a>
+                    <a href="mailto:remodelingmunguiallc@gmail.com" class="text-decoration-none text-dark">
+                      remodelingmunguiallc@gmail.com
+                    </a>
                   </div>
+                  
                 </div>
                 <div class="d-flex align-items-start gap-3">
                   <div class="icon-circle bg-info text-white"><i class="bi bi-geo-alt-fill fs-4"></i></div>
@@ -178,19 +190,13 @@
   </main>
 
   <footer class="text-white py-3 fixed-bottom" style="background-color: #01357c;">
-    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center flex-wrap">
-      <div class="text-center text-md-start mb-2 mb-md-0">
+    <div class="container d-flex justify-content-center">
+      <div class="text-center">
         <strong>MUNGUIA PEREZ LLC</strong> |
-        <i class="bi bi-telephone-fill me-1"></i> +1 786-881-9457 |
-        <i class="bi bi-envelope-fill me-1"></i> info@munguia.com
-      </div>
-      <div class="d-flex justify-content-center gap-3">
-        <a href="https://wa.me/50660001111" target="_blank" class="text-white" title="WhatsApp">
-          <i class="fab fa-whatsapp fa-lg"></i>
-        </a>
-        <a href="https://www.facebook.com/share/1BetNkak8N/?mibextid=wwXIfr" target="_blank" class="text-white" title="Facebook">
-          <i class="fab fa-facebook-f fa-lg"></i>
-        </a>
+        <i class="bi bi-telephone-fill me-1"></i>
+        <a href="tel:+17868819457" class="text-white text-decoration-none">+1 (786) 881-9457</a> |
+        <i class="bi bi-envelope-fill me-1"></i>
+        <a href="mailto:remodelingmunguiallc@gmail.com" class="text-white text-decoration-none">remodelingmunguiallc@gmail.com</a>
       </div>
     </div>
   </footer>
