--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./css/style.css" />
-  
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      background-image: url('img/fondo.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: center;
-    }
+ </head> 
+ <style>
+  body {
+    font-family: 'Montserrat', sans-serif;
+    padding-top: 100px;
+    padding-bottom: 80px;
+    background-color: #f8fafc;
+    background-image: url('img/fondo.png');
+  }
+  h2 {
+    font-weight: 700;
+  }
+  h5 {
+    font-weight: 600;
+  }
 
     .nav-link-hover::after {
       content: '';
@@ -44,61 +49,65 @@
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
+      from {opacity: 0; transform: translateY(-10px);}
+      to {opacity: 1; transform: translateY(0);}
     }
-
     .card-title {
-      font-size: 1.1rem;
-      letter-spacing: 0.5px;
-    }
+font-size: 1.1rem;
+letter-spacing: 0.5px;
+}
 
-    .card-body i {
-      display: block;
-    }
+.card-body i {
+display: block;
+}
 
-    .content-wrapper {
-      background-color: rgba(255, 255, 255, 0.93);
-      padding: 3rem;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-    }
-  </style>
-</head>
+</style>
 
 <body>
 
-<header class="text-white py-3 fixed-top shadow-sm" style="background-color: #01357c;">
-  <div class="container d-flex justify-content-between align-items-center flex-wrap">
-    <div class="d-flex align-items-center gap-3">
-      <img src="img/logo.jpg" alt="Logo" style="height: 55px; border-radius: 10px; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
-      <div class="text-white">
-        <h1 class="fs-4 fw-bold m-0" style="letter-spacing: 1px;">MUNGUIA PEREZ LLC</h1>
-        <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
-      </div>
-    </div>
+  <header class="text-white py-3 fixed-top shadow-lg" style="background-color: #01357c; z-index: 1000;">
+    <div class="container d-flex justify-content-between align-items-center flex-wrap">
 
-    <nav class="d-flex gap-4 flex-wrap justify-content-center">
-      <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Home</a>
-      <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Projects</a>
-      <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contact</a>
-      <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">About Us</a>
-    </nav>
-  </div>
-</header>
+        <div class="text-white">
+            <h1 class="fs-4 fw-bold m-0" style="letter-spacing: 1px;">MUNGUIA PEREZ LLC</h1>
+            <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
+          </div>
+
+          <nav class="d-flex gap-4 flex-wrap justify-content-center">
+            <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Home</a>
+            <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Projects</a>
+            <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contact</a>
+            <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">About Us</a>
+          </nav>
+    </div>
+  </header>
+  
 
 <div style="height: 100px;"></div>
 
 <main class="container py-5">
-  <section class="mb-5 text-center">
-    <h2 class="hero-title fs-2 fw-bold mb-3">
-      Welcome to <span class="text-primary">MUNGUIA PEREZ LLC</span>
-    </h2>
-    <p class="lead text-muted">
-      Experts in <strong>construction, remodeling</strong> and <strong>high-quality finishes</strong>.<br>
-      Thank you for trusting us!
-    </p>
+  <section class="mb-5">
+    <div class="row align-items-center justify-content-center">
+      
+
+      <div class="col-md-2 text-center mb-3 mb-md-0">
+        <img src="img/logo.jpg" alt="Logo" class="img-fluid" style="max-height: 250px; border-radius: 15px;">
+      </div>
+  
+  
+      <div class="col-md-8 text-center text-md-start">
+        <h2 class="hero-title fs-2 fw-bold mb-3">
+          Welcome to <span class="text-primary">MUNGUIA PEREZ LLC</span>
+        </h2>
+        <p class="lead text-muted">
+          Experts in <strong>construction, remodeling</strong> and <strong>high-quality finishes</strong>.<br>
+          Thank you for trusting us!
+        </p>
+      </div>
+  
+    </div>
   </section>
+  
 
   <section class="mb-5">
     <h3 class="text-center fw-bold text-uppercase mb-4">Our Services</h3>
@@ -220,25 +229,17 @@
 </main>
 
 <footer class="text-white py-3 fixed-bottom" style="background-color: #01357c;">
-  <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center flex-wrap">
-    <div class="text-center text-md-start mb-2 mb-md-0">
+  <div class="container d-flex justify-content-center">
+    <div class="text-center">
       <strong>MUNGUIA PEREZ LLC</strong> |
       <i class="bi bi-telephone-fill me-1"></i>
       <a href="tel:+17868819457" class="text-white text-decoration-none">+1 (786) 881-9457</a> |
       <i class="bi bi-envelope-fill me-1"></i>
-      <a href="mailto:info@munguia.com" class="text-white text-decoration-none">info@munguia.com</a>
-    </div>
-    
-    <div class="d-flex justify-content-center gap-3">
-      <a href="https://wa.me/17868819457" target="_blank" class="text-white" title="WhatsApp">
-        <i class="fab fa-whatsapp fa-lg"></i>
-      </a>
-      <a href="https://www.facebook.com/share/1BetNkak8N/?mibextid=wwXIfr" target="_blank" class="text-white" title="Facebook">
-        <i class="fab fa-facebook-f fa-lg"></i>
-      </a>
+      <a href="mailto:remodelingmunguiallc@gmail.com" class="text-white text-decoration-none">remodelingmunguiallc@gmail.com</a>
     </div>
   </div>
 </footer>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
