--- a/proyecto6.html
+++ b/proyecto6.html
@@ -66,20 +66,26 @@
 <body>
   <header class="text-white py-3 fixed-top shadow-lg" style="background-color: #01357c; z-index: 1000;">
     <div class="container d-flex justify-content-between align-items-center flex-wrap">
+  
 
-      <div class="text-white">
-        <h1 class="fs-4 fw-bold m-0" style="letter-spacing: 1px;">MUNGUIA PEREZ LLC</h1>
-        <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
+      <div class="d-flex align-items-center gap-3">
+        <img src="img/logo.jpg" alt="Logo" style="height: 90px; border-radius: 20px;">
+        <div>
+          <h1 class="fs-4 fw-bold m-0" style="letter-spacing: 1px;">MUNGUIA PEREZ LLC</h1>
+          <small class="d-block" style="font-size: 0.8rem;">Construction – Remodeling and Finishing</small>
+        </div>
       </div>
 
-      <nav class="d-flex gap-4 flex-wrap justify-content-center">
+      <nav class="d-flex gap-4 flex-wrap justify-content-center mt-3 mt-md-0">
         <a href="index.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Home</a>
         <a href="proyectos.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Projects</a>
         <a href="contacto.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">Contact</a>
         <a href="acerca.html" class="text-white text-decoration-none fw-semibold position-relative nav-link-hover">About Us</a>
       </nav>
+      
     </div>
   </header>
+  
 
   <main class="container py-5">
 
@@ -112,22 +118,15 @@
   </main>
 
   <footer class="text-white py-3 fixed-bottom" style="background-color: #01357c;">
-    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center flex-wrap">
-
-      <div class="text-center text-md-start mb-2 mb-md-0">
+    <div class="container d-flex justify-content-center">
+      <div class="text-center">
         <strong>MUNGUIA PEREZ LLC</strong> |
-        <i class="bi bi-telephone-fill me-1"></i> +1 786-881-9457 |
-        <i class="bi bi-envelope-fill me-1"></i> info@munguia.com
+        <i class="bi bi-telephone-fill me-1"></i>
+        <a href="tel:+17868819457" class="text-white text-decoration-none">+1 (786) 881-9457</a> |
+        <i class="bi bi-envelope-fill me-1"></i>
+        <a href="mailto:remodelingmunguiallc@gmail.com" class="text-white text-decoration-none">remodelingmunguiallc@gmail.com</a>
       </div>
-
-      <div class="d-flex justify-content-center gap-3">
-        <a href="https://wa.me/50660001111" target="_blank" class="text-white" title="WhatsApp">
-          <i class="fab fa-whatsapp fa-lg"></i>
-        </a>
-        <a href="https://www.facebook.com/share/1BetNkak8N/?mibextid=wwXIfr" target="_blank" class="text-white" title="Facebook">
-          <i class="fab fa-facebook-f fa-lg"></i>
-        </a>
-      </div>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
